--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
         <title>Stock Visualization</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="static/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    </head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+        <script type="text/javascript" src="stock.json"></script>
+        <script type="text/javascript" src="https://d3js.org/d3.v6.js"></script>
+        <!-- <script type="text/javascript" src="https://d3js.org/d3-scale-chromatic.v2.min.js"></script> -->
+
         <body>
             <div class="container">
                 <div class="row">
@@ -36,7 +40,8 @@
                     </div>
                   </div>
                   <div class="col-md-5">
-                    <canvas id="chart" height="300" width="450"></canvas>
+                    <!-- <canvas id="chart" height="300" width="450"></canvas>  for chats.js-->
+                    <div id="my_dataviz"></div>
                   </div>
                   <div class="col-md-5">
                     <div id="gauge"></div>
@@ -56,8 +61,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="data.js"></script>
-    <script type="text/javascript" src="stock.json"></script>
 
+    <!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js%22%3E"></script> -->
 
     <script src="stock.json"></script>
 
