--- a/index.html
+++ b/index.html
@@ -49,16 +49,24 @@
                     <!-- <div id="pie-chart"></div> -->
                     <canvas id="myChart" width="200" height="200"></canvas>
 
-                  </div>
-
-
-                <label for="stockInput">Stock</label>
-                <input type="text" class="form-control" id="stockInput" placeholder="Enter a Ticker"> 
-               
+                  </div>              
              </div>
-             <button id="submit" type="submit" class="btn btn-default">Search</button>
+
+             <form>
+              <div class="form-group">
+                <ul class="list-group" id="filters">
+                  <li class="filter list-group-item">
+                    <label for="date">Enter a Ticker Symbol</label>
+                    <input class="form-control" id="stock-to-filter" type="text" placeholder="AAPL">
+                  </li>
+                  <button id="filter-btn" type="button" class="btn btn-default">Search Ticker</button>
+                </ul>
+              </div>
+            </form>
+
                   <div class="col-md-10">
                     <div id="table-area">
+
                       <table id="ufo-table" class="table table-striped">
                         <thead>
                           <tr>
